# cloud-run-ai

./: .gitignore  AGENT.md  README.md  n8n-deply.sh  pyproject.toml  ruff.toml  sample.env
.github/actions/: GCP.yaml
.kilocode/: setup-script
docs/: DEPLOYMENT_GUIDE.md  PROJECT_PLAN.md  deployment-guide.md  deployment.md  project-plan.md
infra/: README.md
infra/envs/shared/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/service_account/: main.tf  outputs.tf  variables.tf
infrastructure/langflow/cloud_functions/: main.tf  outputs.tf  variables.tf
infrastructure/langflow/cloud_run/: main.tf  outputs.tf  variables.tf
infrastructure/n8n/cloud_functions/: main.tf  variables.tf
infrastructure/n8n/cloud_run/: main.tf  outputs.tf  variables.tf
langflow-terraform/: .gitignore  cloud_run.tf  database.tf  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfstate  variables.tf
projects/langflow/: README.md
projects/langflow/app/cloud_function/: main.py
projects/langflow/terraform/: cloud_functions.tf  cloud_run.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
projects/n8n/: README.md
projects/n8n/app/cloud_function/: main.py
projects/n8n/terraform/: cloud_functions.tf  cloud_run.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: __init__.py  deploy.py  env_check.py
src/cloud_run_ai/: __init__.py
src/cloud_run_ai/common/: __init__.py  config.py
src/cloud_run_ai/langflow/: deployment.py
src/cloud_run_ai/n8n/: deployment.py
terraform/: cloud_run.tf  database.tf  graph.mermaid  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars  variables.tf  vpc.tf
terraform/langflow/: main.tf  outputs.tf  variables.tf
terraform/n8n/: main.tf  outputs.tf  variables.tf
